# legal-docs-retrieval

./: pyproject.toml
