[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Stepp1 <sfaragg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
openai = "1.2.0"
python-docx = "^1.1.0"
python-levenshtein = "^0.23.0"
llama-index = "^0.9.13"
pypdf = "^3.17.1"
cffi = "^1.16.0"
textdistance = "^4.6.0"
guidance = "0.0.63"
pydantic = ">=2.0.0"
unidecode = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
